# ARC-AGI-2

./: .gitignore  ARC_imp.ipynb  AUGMENTATION_CONFIG_GUIDE.md  AUGMENTATION_GUIDE.md  COLAB_SETUP.md  CURRENT_AUGMENTATION_IMPLEMENTATION.md  FILE_SUMMARY.md  Week 0 - ARC AGI.md  buffer.ipynb  changelog.md  evaluate_arc_model.py  log.md  pyproject.toml  readme.md  readme2.md  requirements.txt  requirements_no_versions.txt
.hypothesis/constants/: 0491369ece01015e  11b95e42dd026fb5  7fc2aacc1146d6db  a2faa6152a156272  e66117ad5fb52533  f4d5ff07aee8e6b0
arc/: __init__.py
arc/eval/: __init__.py  poe.py  runner.py  scorer.py  solve_task.py
arc/grids/: __init__.py  core.py  views.py
arc/io/: __init__.py  loader.py
arc/models/: __init__.py  augmentation.py  backup.py  infer.py  tiny_lm.py  train.py  ttt.py
arc/serialize/: __init__.py  task_tokenizer.py  tokens.py
arc/utils/: __init__.py  constants.py  logging.py  seeding.py
arc/viz/: __init__.py  plot.py  viz_task_attempt.py
arc_agi_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: base.yaml
data/processed/: .gitkeep  dev_tasks.json  eval_tasks.json  index.jsonl
data/raw/arc/: .gitkeep
data/raw/arc/io/: loader.py
examples/: constants_demo.py
notebooks/: .gitkeep  00_env_colab.ipynb  eval.ipynb  task_analyze.ipynb  task_viz.ipynb  train_tinylm.ipynb
scripts/: .gitkeep  env_check.py  eval_baseline.py  render_task.py  run_eval.py  run_tests.py  sanity_check.py
tests/: test_core.py  test_generate_and_score.py  test_loader.py  test_runner.py  test_seeding.py  test_solve_task.py  test_tokens.py  test_views.py  test_viz.py
