[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agi-2"
version = "0.1.0"
description = "ARC-AGI-2: Abstraction and Reasoning Corpus research project"
readme = "readme.md"
requires-python = ">=3.8,<3.13"
license = {text = "MIT"}
authors = [
    {name = "ARC-AGI-2 Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core scientific computing - exact versions from conda env
    "numpy==1.24.4",
    "matplotlib==3.7.5",
    "pandas==2.0.3",
    "scipy==1.10.1",
    "scikit-learn==1.3.2",
    
    # PyTorch ecosystem - exact versions
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    
    # Transformers and ML
    "transformers==4.46.3",
    "huggingface-hub==0.36.0",
    "tokenizers==0.20.3",
    "safetensors==0.5.3",
    
    # Jupyter environment
    "jupyter==1.1.1",
    "ipykernel==6.29.5",
    "ipython==8.12.3",
    "ipywidgets==8.1.8",
    
    # Visualization
    "seaborn==0.13.2",
    "plotly==6.4.0",
    "pillow==10.4.0",
    
    # Utilities
    "tqdm==4.67.1",
    "pyyaml==6.0.3",
    "requests==2.32.4",
    "packaging==25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/arc-agi-2/arc-agi-2"
Repository = "https://github.com/arc-agi-2/arc-agi-2"
Issues = "https://github.com/arc-agi-2/arc-agi-2/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc*"]

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 119
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 119
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
